# lochash

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/lochash/: location_hash.hpp  location_hash_algorithm.hpp  location_hash_quantized_coordinate.hpp  location_hash_query_bounding_box.hpp  location_hash_query_distance_squared.hpp  location_hash_types.hpp  location_helpers.hpp  lochash.hpp  real_to_int.hpp
scripts/: check_coverage.ps1  check_coverage.sh
scripts/source_control/githooks/: pre-commit
tests/: CMakeLists.txt  test_helpers.cpp  test_helpers.hpp  test_helpers_determine_complexity.cpp  test_helpers_measure_execution_time.cpp  test_helpers_measure_time_complexity.cpp  test_helpers_to_string_complexity_enum.cpp  test_location_hash_algorithm.cpp  test_location_hash_performance.cpp  test_location_hash_quantized_coordinate.cpp  test_location_hash_query.cpp  test_location_hash_query_bounding_box.cpp  test_location_hash_query_distance_squared.cpp  test_location_hash_recursion.cpp  test_lochash.cpp
